--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,34 @@ body {
     height: 30%;
     background-color: black;
 }
+
+.clock .time {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 22%;
+    color: black;
+    font-size: 32px;
+    font-family: 'Zen Dots', sans-serif;
+    color: #0f766e;
+}
+
+.clock .day {
+    position: absolute;
+    left: 12%;
+    bottom: 50%;
+    transform: translateY(50%);
+    font-size: 20px;
+    font-family: 'Zen Dots', sans-serif;
+    color: black;
+}
+
+.clock .date {
+    position: absolute;
+    right: 16%;
+    bottom: 50%;
+    transform: translateY(50%);
+    color: black;
+    font-size: 20px;
+    font-family: 'Zen Dots', sans-serif;
+}
